--- a/server/views/layout.phtml
+++ b/server/views/layout.phtml
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href=" <?= Config::CLIENT_ASSET_PATH; ?>css/default.css" type="text/css"/>
     <link rel="stylesheet" href=" <?= Config::CLIENT_ASSET_PATH; ?>css/style.css" type="text/css"/>
     <link rel="stylesheet" href=" <?= Config::CLIENT_ASSET_PATH; ?>css/modals.css" type="text/css"/>
-    <link rel="stylesheet" href=" <?= Config::CLIENT_ASSET_PATH; ?>css/uploadfile.css" type="text/css"/>
     <link rel="stylesheet" href=" <?= Config::CLIENT_ASSET_PATH; ?>css/dropzone.css" type="text/css"/>
+    <link rel="stylesheet" href=" <?= Config::CLIENT_ASSET_PATH; ?>css/smoothproducts.css" type="text/css"/>
 </head>
 
 <body>
@@ -122,6 +122,7 @@
 
 <script src="<?= Config::CLIENT_ASSET_PATH; ?>javascript/jquery-3.2.1.min.js"></script>
 <script src="<?= Config::CLIENT_ASSET_PATH; ?>javascript/bootstrap.min.js"></script>
+<script src="<?= Config::CLIENT_ASSET_PATH; ?>javascript/smoothproducts.min.js"></script>
 <script src="<?= Config::CLIENT_SRC_PATH; ?>formUtilities.js"></script>
 <script src="<?= Config::CLIENT_SRC_PATH; ?>loginDialog.js"></script>
 <script src="<?= Config::CLIENT_SRC_PATH; ?>mainPage.js"></script>
