--- a/server/views/property.phtml
+++ b/server/views/property.phtml
@@ -52,7 +52,7 @@
             </div>
             <div>
                 <label>Published:</label>
-                <?= $property['created_at'] ?>
+                <?= date('d/m/Y', strtotime($property['created_at'])); ?>
             </div>
 
 
