fix explode remove tab navigation errors from property form fix updating default image property

--- a/server/views/edit-property.phtml
+++ b/server/views/edit-property.phtml
@@ -18,7 +18,7 @@
                     <div class="form-group">
                         <label>Title</label>
                         <input type="text" name="title" class="form-control input-lg"
-                               value="<?= $property['title'] ?>" placeholder="Title" tabindex="4">
+                               value="<?= $property['title'] ?>" placeholder="Title" >
 
                         <div class="error"></div>
                     </div>
@@ -26,7 +26,7 @@
                     <div class="form-group">
                         <label>Description</label>
                         <textarea name="description" class="form-control input-lg"
-                                  placeholder="Description" tabindex="3"><?= $property['description'] ?></textarea>
+                                  placeholder="Description"><?= $property['description'] ?></textarea>
                         <div class="error"></div>
                     </div>
 
@@ -101,7 +101,7 @@
                     <hr class="colorgraph">
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
-                            <input type="submit" value="Save" class="btn btn-theme btn-block btn-lg" tabindex="7">
+                            <input type="submit" value="Save" class="btn btn-theme btn-block btn-lg" >
                         </div>
                         <div class="col-xs-12 col-md-6">
                             <div class="btn btn-warning btn-block btn-lg" id="cancel-button"> Cancel</div>
