change button to "create admin"

--- a/server/views/layout.phtml
+++ b/server/views/layout.phtml
@@ -94,7 +94,7 @@
                             <?php endif; ?>
                             <?php if (Authorization::hasAdminAccess()): ?>
                                 <li><a href="admin/logout">Logout</a></li>
-                                <li><a id="register-user-button" href="#">Create user</a></li>
+                                <li><a id="register-user-button" href="#">Create admin</a></li>
                             <?php endif; ?>
 
                     </ul>
