fix price range

--- a/server/views/properties.phtml
+++ b/server/views/properties.phtml
@@ -57,7 +57,7 @@
 
         <div class="col-md-2 mb-2">
             <label >Price range (£)</label>
-            <select name="priceRange" id="buyPriceRange" class="form-control">
+            <select id="buyPriceRange" class="form-control">
                 <option value="">Any</option>
                 <option value="0-50">Up to 50,000</option>
                 <option value="50-75">50,000-75,000</option>
@@ -70,7 +70,7 @@
                 <option value="500+">500,000 and over</option>
             </select>
 
-            <select name="priceRange" id="rentPriceRange" class="form-control">
+            <select id="rentPriceRange" class="form-control">
                 <option value="">Any</option>
                 <option value="0-50">Up to 50</option>
                 <option value="50-100">50-100</option>
