add video advert

--- a/server/views/properties.phtml
+++ b/server/views/properties.phtml
@@ -11,6 +11,11 @@
                         Let us know what are you looking for below and then browse the properties we have available.
                         If you have a property to sell or rent click <a href="/selling">here</a>
                     </p>
+
+                    <video width="320" height="240" controls controlsList="nodownload">
+                        <source src="client/assets/video/advert.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
                 </div>
             </div>
         </div>
