html validation fixes

--- a/server/views/contact.phtml
+++ b/server/views/contact.phtml
@@ -82,7 +82,7 @@
             <h2>Map view</h2>
             <hr class="colorgraph">
 
-            <section id="content">
+            <section>
 
                 <div class="map">
                     <div id="google-map" data-latitude="51.478657" data-longitude="-0.064545"></div>
