--- a/server/views/selling.phtml
+++ b/server/views/selling.phtml
@@ -14,7 +14,7 @@
             <form role="form" class="selling-form" id="selling-form">
 
                 <div class="form-group">
-                    <label for="sel1">Buy or sell</label>
+                    <label >Buy or sell</label>
                     <select name="requestType" class="form-control" id="sel1">
                         <option value="" selected>Please select</option>
                         <option value="sell">Sell</option>
