--- a/server/views/properties.phtml
+++ b/server/views/properties.phtml
@@ -15,6 +15,7 @@
                     <video width="320" height="240" controls controlsList="nodownload">
                         <source src="client/assets/video/advert.mp4" type="video/mp4">
                         Your browser does not support the video tag.
+                        <a href="client/assets/video/advert.mp4">video</a>
                     </video>
                 </div>
             </div>
@@ -33,8 +34,8 @@
     <div class="row">
 
         <div class="col-md-2 mb-2">
-            <label for="sel1">Rent or Buy</label>
-            <select name="rentalProperty" class="form-control" id="rentalProperty" required>
+            <label>Rent or Buy</label>
+            <select name="rentalProperty" class="form-control" id="rentalProperty">
                 <option value="buy">Buy</option>
                 <option value="rent">Rent</option>
             </select>
@@ -123,6 +124,6 @@
 <div class="result"></div>
 <div style="clear:both;"></div>
 
-<section id="content">
+<section>
     <div id="google-map" ></div>
 </section>
