--- a/server/views/layout.phtml
+++ b/server/views/layout.phtml
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href=" <?= Config::CLIENT_ASSET_PATH; ?>css/modals.css" type="text/css"/>
     <link rel="stylesheet" href=" <?= Config::CLIENT_ASSET_PATH; ?>css/dropzone.css" type="text/css"/>
     <link rel="stylesheet" href=" <?= Config::CLIENT_ASSET_PATH; ?>css/smoothproducts.css" type="text/css"/>
+    <link rel="stylesheet" href=" <?= Config::CLIENT_ASSET_PATH; ?>css/custom.css" type="text/css"/>
 </head>
 
 <body>
