user gmaps instead of google javascript code

--- a/server/views/contact.phtml
+++ b/server/views/contact.phtml
@@ -83,10 +83,7 @@
             <hr class="colorgraph">
 
             <section>
-
-                <div class="map">
-                    <div id="google-map" data-latitude="51.478657" data-longitude="-0.064545"></div>
-                </div>
+                <div id="map" data-lat="51.478657" data-lng="-0.064545"></div>
             </section>
             <hr class="colorgraph">
         </div>
